--- a/ConsoleAppGonki.csproj
+++ b/ConsoleAppGonki.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>ConsoleAppGonki.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
